--- a/yesnotarot.html
+++ b/yesnotarot.html
@@ -2,18 +2,16 @@
   <head>
     <meta charset="UTF-8" />
     <title>Tarotsite</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="yesnotarot.css" />
     <script src="script.js"></script>
     <title></title>
 
 <body>
         <!-- Header -->
-        <div class="scrollmenu">
-          <h1 style="font-family:'Roboto', sans-serif; font-size: 24px;font-weight: 300; height: 116px; width: 258px;">Yes/No Tarot</h1>
+        <div class="container">
+              <img src="https://i.imgur.com/nzeisvU.jpg" alt="Paris" width="300" height="300">
         </div>
-        <div class="">
-  <img src="https://www.horoscope.com/images-US/tarot/back/tarot-card.png"><img>
-        </div>
+        <div class= "button">
   <script>
       <!--
       /*
@@ -35,7 +33,7 @@
       //-->
       </script>
       <form method="post">
-      <p><input type="button" name="B1" value="Random Link >>" onclick="randomlink()"></p> </form>
-      
+      <p><input type="button" name="B1" value="Yes or No" onclick="randomlink()"></p> </form>
+      </div>
   </body>
 </html>
