--- a/index.html
+++ b/index.html
@@ -3,42 +3,25 @@
     <meta charset="UTF-8" />
     <title>Tarotsite</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
-    <title></title>
 
-<body>
-        <!-- Header -->
-        <div class="scrollmenu">
-          <h1 style="font-family:'Roboto', sans-serif; font-size: 24px;font-weight: 300; height: 116px; width: 258px;">Yes/No Tarot</h1>
+    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body style="background-color: #fffff;">
+    <!-- Header -->
+    <div style="padding-top:300px;"></div>
+    <div class="row"> 
+        <div class="column1">
+          <!--<div class="tooltip"> 
+          <a href="yesnotarot.html" class="button1"  data-balloon="For minified version, visit Github" data-balloon-pos="up"/></a>
+          <span class="tooltiptext">Yes/No Tarot</span></div> -->
+          <div class="tooltip">
+          <a href="yesnotarot.html" class="button2"/></a>
+          <span class="tooltiptext">Yes/No Tarot</span></div>
+          <div class="tooltip">
+          <!--<a href="celticcross.html" class="button3"/></a>
+          <span class="tooltiptext">Celtic Cross</span></div>-->
         </div>
-        <div class="tarotcards">
-  <img src="https://www.horoscope.com/images-US/tarot/back/tarot-card.png"><img>
-        </div>
-  <script>
-      <!--
-      var randomlinks=new Array()
-      
-      randomlinks[0]="yes.html"
-      randomlinks[1]="no.html"
-      randomlinks[2]="maybe.html"
-      
-      function randomlink(){
-      window.location=randomlinks[Math.floor(Math.random()*randomlinks.length)]
-      }
-      //-->
-      </script>
-      <div class="form">
-      <form method="post">
-      <p><input type="button" style="background-color: #4CAF50;
-        border: none;
-        color: white;
-        padding: 15px 32px;
-        text-align: center;
-        text-decoration: none;
-        display: inline-block;
-        font-size: 16px;
-        margin: 4px 2px;
-        cursor: pointer;" name="B1" value="Random Link >>" onclick="randomlink()"></p> </form>
-         </div>
   </body>
 </html>
